...
            ) {
                // Card number input
                GiftCardNumberInput(
                    modifier = Modifier
                        .weight(0.7f)
                        .focusRequester(focusCardNumber)
                        .testTag("cardNumberInput"),
                    value = uiState.value.cardNumber,
                    enabled = !uiState.value.isLoading,
                    onValueChange = { viewModel.updateCardNumber(it) },
                    nextFocus = focusCardPin
                )

...
            }

            // Add Card button
            SdkButton(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("addCard"),
                text = stringResource(R.string.button_submit),
                enabled = uiState.value.isDataValid && !uiState.value.isLoading,
                isLoading = uiState.value.isLoading
            ) {
                viewModel.tokeniseCard()
            }
...
